Coursera/Certified/Python For Everybody/Getting Started With Python/Weekly Notes/Week 3/Notes 3.txt
print('"hello"')
"hello"
>>> print(""hello"")
  File "<stdin>", line 1
    print(""hello"")
                ^
SyntaxError: invalid syntax
>>> print("'hello'")
'hello'
>>> print(''hello'')
  File "<stdin>", line 1
    print(''hello'')
                ^
SyntaxError: invalid syntax

**********

>>> x = 25
>>> print(x)
25
>>> print("x")
x
>>> print('x')
x

**********

 x = 26
>>> x = x + 26
>>> print(x)
52
>>> print('x')
x
>>> print("x")
x

**********
